# usbc-pd-guide

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  usbc-pd-guide.code-workspace
docs/: architecture.md  configuration-channel.md  index.md
docs/port-controller/: index.md
docs/port-controller/registers/: alert-extended-mask.md  alert-extended.md  alert-mask.md  alert.md  cc-status.md  command.md  configure-extended-1.md  configure-standard-output.md  device-capabilities-1.md  device-capabilities-2.md  device-capabilities-3.md  device-id.md  extended-status-mask.md  extended-status.md  fault-control.md  fault-status-mask.md  fault-status.md  generic-timer.md  message-header-info.md  pd-interface-rev.md  power-control.md  power-status-mask.md  power-status.md  product-id.md  receive-buffer.md  receive-detect.md  role-control.md  standard-input-capabilities.md  standard-output-capabilities.md  tcpc-control.md  transmit-buffer.md  transmit.md  usbpd-rev-ver.md  usbtypec-rev.md  vbus-nondefault-target.md  vbus-sink-disconnect-threshold.md  vbus-voltage-alarm-hi-cfg.md  (+5 more)
docs/port-manager/: index.md
docs/stylesheets/: extras.css
includes/: abbreviations.md  autolinks.md  hyperlinks.md
includes/port-controller/: register-hyperlinks.md  standard-io-signals-hyperlinks.md
includes/port-manager/: connection-states-hyperlinks.md
pkl/: Condition.pkl  Event.pkl  System.pkl  Types.pkl
pkl/port-controller/: PortController.pkl
pkl/port-manager/: PortManager.pkl
src/usb/: main.py  subtypes.py
src/usbcli/: console.py  main.py
src/usbdoc/: __init__.py  resolve.py
(+139 files in other folders)
